# tuatara-lang

./: CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/workflows/: clang-format-check.yml  cmake-linux.yml  cmake-macos.yml  cmake-windows.yml  codecov.yml
core/: CMakeLists.txt
core/include/: driver.hpp  json.hpp  line_stream.hpp  printer.hpp  rang.hpp  scanner.hpp  str_to_int.hpp
core/include/ast/: array.hpp  array_type.hpp  ast.hpp  ast_includes.hpp  block.hpp  call.hpp  definition.hpp  error.hpp  expression.hpp  func_call.hpp  func_def.hpp  func_type.hpp  function.hpp  index.hpp  int.hpp  literal.hpp  object_type.hpp  op_call.hpp  op_def.hpp  pattern.hpp  simple_expression.hpp  struct.hpp  tuple.hpp  tuple_type.hpp  type.hpp  type_definition.hpp  type_value_definition.hpp  u64.hpp  value_definition.hpp  variable.hpp
core/include/type/: array.hpp  class.hpp  context.hpp  error.hpp  func.hpp  object.hpp  tuple.hpp  type.hpp  type_checker.hpp  wrapper.hpp
core/src/: CMakeLists.txt  driver.cpp  json.cpp  line_stream.cpp  parser.y  printer.cpp  scanner.l
core/src/ast/: array.cpp  array_type.cpp  ast.cpp  block.cpp  call.cpp  definition.cpp  error.cpp  expression.cpp  func_call.cpp  func_def.cpp  func_type.cpp  function.cpp  index.cpp  int.cpp  literal.cpp  object_type.cpp  op_call.cpp  op_def.cpp  pattern.cpp  simple_expression.cpp  struct.cpp  tuple.cpp  tuple_type.cpp  type.cpp  type_definition.cpp  type_value_definition.cpp  u64.cpp  value_definition.cpp  variable.cpp
core/src/type/: array.cpp  class.cpp  context.cpp  error.cpp  func.cpp  object.cpp  tuple.cpp  type.cpp  type_checker.cpp  wrapper.cpp
examples/: example.tta
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_line_stream.cpp  test_main.cpp  test_parser.cpp  test_printer.cpp  test_scanner.cpp  test_type_checker.cpp  test_util.hpp
test/ast/: test_error.cpp  test_object_type.cpp  test_type_definition.cpp  test_u64.cpp  test_value_definition.cpp  test_variable.cpp
test/type/: test_class.cpp  test_error.cpp  test_object.cpp
